{
  "version": 4,
  "terraform_version": "0.15.0",
  "serial": 19,
  "lineage": "1c48b05a-b2e3-e021-87e2-c78b9c2f38ea",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "WebServer1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dc5785603ad4ff54",
            "arn": "arn:aws:ec2:ap-southeast-1:061335423113:instance/i-0b33ad4d1abd0c0a9",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "snapshot_id": "snap-043ae02dac2c1f4bc",
                "throughput": 0,
                "volume_id": "vol-019b9884826142a61",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b33ad4d1abd0c0a9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "MyEc2KeyPair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05bda77e65db1ab6d",
            "private_dns": "ip-172-31-29-77.ap-southeast-1.compute.internal",
            "private_ip": "172.31.29.77",
            "public_dns": "ec2-54-255-236-12.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "54.255.236.12",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-019b9884826142a61",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-bb7459dc",
            "tags": {
              "Name": "WebServer1"
            },
            "tags_all": {
              "Name": "WebServer1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-a0aa8dd9"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "WebServer2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dc5785603ad4ff54",
            "arn": "arn:aws:ec2:ap-southeast-1:061335423113:instance/i-00e439f44764c72e0",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00e439f44764c72e0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "MyEc2KeyPair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05d3a2c0bf2597532",
            "private_dns": "ip-172-31-34-13.ap-southeast-1.compute.internal",
            "private_ip": "172.31.34.13",
            "public_dns": "ec2-54-254-213-131.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "54.254.213.131",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "Name": "WebServer2"
                },
                "throughput": 0,
                "volume_id": "vol-0ba1227416bbf754a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "Webtier"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-f699cbbf",
            "tags": {
              "Name": "WebServer2"
            },
            "tags_all": {
              "Name": "WebServer2"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "vpc_security_group_ids": [
              "sg-04787e19771fec9b3"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "WordPressServer1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dc5785603ad4ff54",
            "arn": "arn:aws:ec2:ap-southeast-1:061335423113:instance/i-0a60d9f84ec21fd65",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a60d9f84ec21fd65",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "MyEc2KeyPair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d6d2fcaf9849c0c1",
            "private_dns": "ip-172-31-30-97.ap-southeast-1.compute.internal",
            "private_ip": "172.31.30.97",
            "public_dns": "ec2-54-169-100-17.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "54.169.100.17",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02e33239bfc56ed3b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "WebDMZ"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-bb7459dc",
            "tags": {
              "Name": "WordPressServer1"
            },
            "tags_all": {
              "Name": "WordPressServer1"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "vpc_security_group_ids": [
              "sg-004cb02d13a5c667f"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "WordPressServer2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dc5785603ad4ff54",
            "arn": "arn:aws:ec2:ap-southeast-1:061335423113:instance/i-03afe6ee29923f0ec",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03afe6ee29923f0ec",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "MyEc2KeyPair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d6ba8f3975dff321",
            "private_dns": "ip-172-31-34-108.ap-southeast-1.compute.internal",
            "private_ip": "172.31.34.108",
            "public_dns": "ec2-54-169-111-36.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "54.169.111.36",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "Name": "WordPressServer2"
                },
                "throughput": 0,
                "volume_id": "vol-0602c217fb1d8c9a8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "WebDMZ"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-f699cbbf",
            "tags": {
              "Name": "WordPressServer2"
            },
            "tags_all": {
              "Name": "WordPressServer2"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "vpc_security_group_ids": [
              "sg-004cb02d13a5c667f"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "MYALB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:061335423113:loadbalancer/app/MYALB/fdada0c46120b1fd",
            "arn_suffix": "app/MYALB/fdada0c46120b1fd",
            "desync_mitigation_mode": "defensive",
            "dns_name": "MYALB-1578025640.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:061335423113:loadbalancer/app/MYALB/fdada0c46120b1fd",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "MYALB",
            "security_groups": [
              "sg-04787e19771fec9b3"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-5f53b206"
              },
              {
                "subnet_id": "subnet-bb7459dc"
              },
              {
                "subnet_id": "subnet-f699cbbf"
              }
            ],
            "subnets": [
              "subnet-5f53b206",
              "subnet-bb7459dc",
              "subnet-f699cbbf"
            ],
            "timeouts": {
            },
            "vpc_id": "vpc-680a610f",
            "zone_id": "Z1LMS91P8CMLE5"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "MyAppALB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:061335423113:loadbalancer/app/MyAppALB/dc382fe0a4cae5c7",
            "arn_suffix": "app/MyAppALB/dc382fe0a4cae5c7",
            "desync_mitigation_mode": "defensive",
            "dns_name": "MyAppALB-1821147027.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:061335423113:loadbalancer/app/MyAppALB/dc382fe0a4cae5c7",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "MyAppALB",
            "security_groups": [
              "sg-04787e19771fec9b3"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-5f53b206"
              },
              {
                "subnet_id": "subnet-bb7459dc"
              },
              {
                "subnet_id": "subnet-f699cbbf"
              }
            ],
            "subnets": [
              "subnet-5f53b206",
              "subnet-bb7459dc",
              "subnet-f699cbbf"
            ],
            "tags": {
              "Name": "App ALB"
            },
            "tags_all": {
              "Name": "App ALB"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-680a610f",
            "zone_id": "Z1LMS91P8CMLE5"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "AppWPTG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:061335423113:targetgroup/AppWPTG/6001ab2f816a5330",
            "arn_suffix": "targetgroup/AppWPTG/6001ab2f816a5330",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 5,
                "matcher": "200",
                "path": "/healthy.html",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 2,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:061335423113:targetgroup/AppWPTG/6001ab2f816a5330",
            "load_balancing_algorithm_type": "round_robin",
            "name": "AppWPTG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "App Server TG"
            },
            "tags_all": {
              "Name": "App Server TG"
            },
            "target_type": "instance",
            "vpc_id": "vpc-680a610f"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "MyWPTG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:061335423113:targetgroup/MyWPTG/db433c70472082e0",
            "arn_suffix": "targetgroup/MyWPTG/db433c70472082e0",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 6,
                "matcher": "302",
                "path": "/index.html",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 2,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:061335423113:targetgroup/MyWPTG/db433c70472082e0",
            "load_balancing_algorithm_type": "round_robin",
            "name": "MyWPTG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-680a610f"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "RDSSecurityGroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:061335423113:security-group/sg-0cab80426ca7b6829",
            "description": "RDSSecurityGroup",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cab80426ca7b6829",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-004cb02d13a5c667f"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "RDSSecurityGroup",
            "name_prefix": "",
            "owner_id": "061335423113",
            "revoke_rules_on_delete": null,
            "tags": {},
            "tags_all": {},
            "timeouts": {
              "create": null,
              "delete": null
            },
            "vpc_id": "vpc-680a610f"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "WebDMZ",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:061335423113:security-group/sg-004cb02d13a5c667f",
            "description": "WebDMZ",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-004cb02d13a5c667f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0",
                  "52.221.198.206/32"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "WebDMZ",
            "name_prefix": "",
            "owner_id": "061335423113",
            "revoke_rules_on_delete": null,
            "tags": {},
            "tags_all": {},
            "timeouts": {
              "create": null,
              "delete": null
            },
            "vpc_id": "vpc-680a610f"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Webtier",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:061335423113:security-group/sg-04787e19771fec9b3",
            "description": "launch-wizard-1 created 2021-12-18T10:58:39.915+08:00",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04787e19771fec9b3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Webtier",
            "name_prefix": "",
            "owner_id": "061335423113",
            "revoke_rules_on_delete": null,
            "tags": {},
            "tags_all": {},
            "timeouts": {
              "create": null,
              "delete": null
            },
            "vpc_id": "vpc-680a610f"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}